welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:12: error: ';' expected but 'else' found.
    else{
    ^ZigZag:22: error: Missing closing brace `}' assumed here
} 
^