welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
  var cpt:Int =0
  var h : Int =getMondeHauteur()
  var l : Int = getMondeLargeur
  
  if (getX()!=l && getY()!=h){
    if (getX()==0){
      for (i<- 0 to l-1 ){
        setPos(i,getY())
        ecritMessage(cpt)
        cpt+=1
      }
    else{
      for (i<- l-1 to 0 by -1 ){
        setPos(i,getY())
        ecritMessage(cpt)
        cpt+=1
      }
    }
    setPos(getX(),getY()+1) 
  }

}